src/objects/c2g__CurrencyCache__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>c2g__Date100__c</fullName>
        <label>Date100</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Date101__c</fullName>
        <label>Date101</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Date102__c</fullName>
        <label>Date102</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__LastIndex__c</fullName>
        <label>LastIndex</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Rate100__c</fullName>
        <label>Rate100</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Rate101__c</fullName>
        <label>Rate101</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Rate102__c</fullName>
        <label>Rate102</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>CurrencyCache</label>
</CustomObject>